link map and info

--- a/BusHelper/wwwroot/css/style.css
+++ b/BusHelper/wwwroot/css/style.css
@@ -76,6 +76,10 @@ body {
     background-color: #FFFFFF;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 [tabindex="-1"]:focus:not(:focus-visible) {
     outline: 0 !important;
 }
