--- a/BusHelper/wwwroot/css/bar.css
+++ b/BusHelper/wwwroot/css/bar.css
@@ -29,8 +29,24 @@ input {
     cursor: pointer;
 }
 
+.navbar-nav a {
+    text-decoration: none;
+    height: 80px;
+    width: 100%;
+    line-height: 80px;
+    text-align: center;
+    display: block;
+    transition: 0.6s all;
+}
+
+.navbar-nav a:hover {
+    background: #3A7EC6;
+}
+
 .fontsize {
+    text-decoration: none;
     font-size: 20px;
+    padding-left: 30px;
     padding-right: 40px;
 }
 
@@ -91,4 +107,16 @@ input {
 
 .bottom {
     margin-bottom: 2px;
+}
+
+.fixed-right {
+    float: right;
+}
+
+.layer-1 {
+    z-index: 1;
+}
+
+.layer-2 {
+    z-index: 2;
 }
