--- a/BusHelper/wwwroot/css/right-menu.css
+++ b/BusHelper/wwwroot/css/right-menu.css
@@ -1,15 +1,22 @@
-@import "http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css";
+body,
+html {
+    width: 100%;
+    height: 100%;
+}
+
 .sidebar {
+    background: #FFFFFF;
     float: right;
     width: 200px;
+    height: 85%;
     margin-right: -200px;
-    height: 100%;
-    background-color: #54B5E7;
-    overflow: hidden;
     transition: 0.5s all;
 }
 
 .side {
+    background: #FFFFFF;
+    overflow: auto;
+    height: 85%;
     margin-right: 0;
 }
 
@@ -19,6 +26,9 @@
 .sidebar ul {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 
@@ -26,41 +36,56 @@
 
 .sidebar ul li {
     list-style: none;
-}
-
-
-/*去下划线*/
-
-.sidebar ul li a {
-    text-decoration: none;
-    color: white;
-    height: 80px;
+    height: 45px;
     width: 100%;
-    font-size: 40px;
-    line-height: 80px;
-    text-align: center;
-    display: block;
-    transition: 0.6s all;
+    font-size: 10px;
+    transition: 0.2s all;
+    cursor: pointer;
 }
 
-.sidebar ul li a:hover {
-    background: #95a5a6;
+.sidebar ul li h5 {
+    color: #54B5E7;
+    line-height: 45px;
+    margin-left: 10px;
+}
+
+.sidebar>ul>li:hover {
+    background: #3A7EC6;
 }
 
 .btn {
     float: right;
-    padding: 0 10px;
-    font-size: 40px;
-    text-decoration: none;
-    color: #2c3e50;
-    font-family: Ionicons;
-    cursor: pointer;
+    height: 45px;
+    line-height: 27px !important;
+    padding-left: -100px;
+    border: 2px solid #54B5E7 !important;
+    color: #FFFFFF !important;
+    font-size: 14px !important;
+    border-radius: 25px 0px 0px 25px !important;
+    background-color: #54B5E7!important;
 }
 
-.btn:before {
-    content: '\f20d';
+
+/* .btnc {
+    float: right;
+    padding-left: -100px;
+    border: 2px solid #2c3e50;
+    border-radius: 5px 0px 0px 5px;
+    background-color: #2c3e50;
+    cursor: pointer;
+} */
+
+
+/* .btn:before {
+    content: url(../img/左滑\ \(1\).svg);
+    width: 30px;
 }
 
 .btnc:before {
     content: '\f12a';
+} */
+
+.w100-h100 {
+    width: 100%;
+    height: 100%;
 }
