--- a/BusHelper/wwwroot/css/right-menu.css
+++ b/BusHelper/wwwroot/css/right-menu.css
@@ -8,7 +8,7 @@ html {
     background: #FFFFFF;
     float: right;
     width: 200px;
-    height: 85%;
+    height: 100vh;
     margin-right: -200px;
     transition: 0.5s all;
 }
