--- a/BusHelper/wwwroot/css/bar.css
+++ b/BusHelper/wwwroot/css/bar.css
@@ -26,7 +26,20 @@ input {
     width: 78px;
     height: 32px;
     float: right;
-    background: #DE903A;
+    background: #4EA7D6;
+    color: white;
+    text-align: center;
+    line-height: 32px;
+    cursor: pointer;
+}
+
+.search {
+    width: 100px;
+    height: 38px;
+    float: right;
+    border: 2px solid#a1cce3;
+    border-radius: 5px;
+    background: #4EA7D6;
     color: white;
     text-align: center;
     line-height: 32px;
@@ -64,8 +77,15 @@ input {
 
 .left-up {
     position: relative;
-    top: -20px;
+    top: -18px;
     left: 10px;
+}
+
+.left-up-bg {
+    position: relative;
+    top: -18px;
+    left: 10px;
+    padding-right: 25px;
 }
 
 .border-round {
@@ -77,7 +97,7 @@ input {
 }
 
 .text-blue {
-    color: #54B5E7 !important;
+    color: #58abd5 !important;
 }
 
 .wrapper {
@@ -118,6 +138,22 @@ input {
     font-weight: bold;
 }
 
+.left-up-exceed-no-other {
+    width: 200px;
+    height: 30px;
+    border: 2px solid #54B5E7;
+    background-color: #54B5E7;
+    border-radius: 10px 10px 0px 0px;
+    position: relative;
+    top: -30px;
+    left: 0px;
+    line-height: 30px;
+    font-size: 16px;
+    color: #FFFFFF;
+    text-align: center;
+    font-weight: bold;
+}
+
 .bottom {
     margin-bottom: 2px;
 }
@@ -140,4 +176,12 @@ input {
 
 .text-dark-blue {
     color: #3A7EC6;
+}
+
+.container-test {
+    width: 100%;
+    height: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1230px;
 }
