--- a/BusHelper/wwwroot/css/style.css
+++ b/BusHelper/wwwroot/css/style.css
@@ -7941,6 +7941,10 @@ button.bg-dark:focus {
     padding-top: 3rem !important;
 }
 
+.pt-6 {
+    padding-top: 6rem;
+}
+
 .pr-5,
 .px-5 {
     padding-right: 3rem !important;
