添加立即联系的UI

--- a/BusHelper/wwwroot/css/bar.css
+++ b/BusHelper/wwwroot/css/bar.css
@@ -185,3 +185,10 @@ input {
     margin-left: auto;
     max-width: 1230px;
 }
+
+.linking {
+    color: #4C7FC4;
+    height: 30px;
+    line-height: 30px;
+    padding-left: 10px;
+}
