修改警示信息

--- a/BusHelper/wwwroot/css/style.css
+++ b/BusHelper/wwwroot/css/style.css
@@ -4339,6 +4339,7 @@ input[type="button"].btn-block {
     align-items: center;
     justify-content: space-between;
     padding: 0.5rem 1rem;
+    z-index: 100;
 }
 
 .navbar .container,
