点击map界面司机消息，该卡片可以消失

--- a/BusHelper/wwwroot/css/mailbox.css
+++ b/BusHelper/wwwroot/css/mailbox.css
@@ -105,6 +105,7 @@ nav .redpoint{
 
 /* map界面弹出司机消息 */
 .pop-panel {
+    display: block;
     margin-top: 100px;
     margin-bottom: 20px;
     background-color: #fff;
