--- a/BusHelper/wwwroot/css/bar.css
+++ b/BusHelper/wwwroot/css/bar.css
@@ -102,7 +102,7 @@ input {
 
 .wrapper {
     display: grid;
-    grid-template-columns: 1.5fr 1.5fr 1.2fr 1.5fr 1.5fr 0.25fr;
+    grid-template-columns: 1.5fr 1.2fr 1.5fr 0.25fr;
     grid-row-gap: 0px;
     align-items: center;
     justify-content: center;
@@ -111,7 +111,7 @@ input {
 
 .wrapper-danger {
     display: grid;
-    grid-template-columns: 2.5fr 1fr 3fr 1fr 3fr 1fr 3fr 1fr;
+    grid-template-columns: 2.5fr 0.2fr 3fr 1fr 3.5fr 0.1fr 3fr 0.2fr;
     grid-row-gap: 0px;
     align-items: center;
     justify-content: center;
@@ -195,4 +195,12 @@ input {
 
 .red-bg {
     background-color: rgb(239, 201, 201);
+}
+
+.text-dark-teal {
+    color: #094734;
+}
+
+.max-550 {
+    max-width: 550px;
 }
