--- a/BusHelper/wwwroot/css/bar.css
+++ b/BusHelper/wwwroot/css/bar.css
@@ -118,6 +118,15 @@ input {
     grid-auto-rows: minmax(20px, auto);
 }
 
+.wrapper-danger-new {
+    display: grid;
+    grid-template-columns: 2.5fr 0.2fr 3fr 0.7fr 3.5fr 0.1fr 3fr 0.7fr;
+    grid-row-gap: 0px;
+    align-items: center;
+    justify-content: center;
+    grid-auto-rows: minmax(20px, auto);
+}
+
 .mini-text {
     font-size: 12px !important;
 }
