--- a/BusHelper/wwwroot/css/mailbox.css
+++ b/BusHelper/wwwroot/css/mailbox.css
@@ -1,5 +1,6 @@
  /* mailbox.html的相关css
- Created by cyx on 2022.5.20 */
+    包含map.html的左下角pop-panel样式
+    Created by cyx on 2022.5.20 */
 :root{
     --sidebar-bg-color:#060C20;
 }
@@ -106,26 +107,27 @@ nav .redpoint{
 /* map界面弹出司机消息 */
 .pop-panel {
     display: block;
-    margin-top: 100px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    /* font-size: 10px; */
     background-color: #fff;
     border: 1px solid ;
     border-radius: 4px;
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-    position: absolute;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);    
     width: 300px;
-    height: 405px;
+    /* height: 200px;  */
     left: 10px;
     z-index: 1000;
-    border-color: #337ab7;
+    border-color: #121F38;
 }
 
 
 .pop-panel>.panel-heading {
+    font-size: 10px;
     color: #fff;
-    background-color: #337ab7;
-    border-color: #337ab7;
+    background-color: #121F38;
+    border-color: #121F38;
     
 }
 .pop-panel > .list-group .driver-list-group-item{
@@ -139,7 +141,9 @@ nav .redpoint{
     text-align: center;
     vertical-align: middle;
     user-select: none;
-   
+    background-color: #121F38;
+    color: snow;
+    width: 40%;
     border: 2px solid transparent;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
@@ -152,8 +156,16 @@ nav .redpoint{
     text-decoration: none;
 }
 
-.pop-btn:focus,
 .pop-btn.focus {
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(228, 122, 46, 0.25);
+}
+.pop-panel > .p{
+    font-size: 16px;
+    color: #060C20;
+}
+.pop-fix-position{
+    position: absolute;
+    bottom : 20px;
+    left : 20px;
 }
